<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:cardMaxElevation="5dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white_brayner">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/content_image"
                android:src="@drawable/ic_menu_lang"
                app:tint="@color/orangeMC" />

            <TextView
                android:id="@+id/txtSelectLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:paddingTop="5dp"
                android:text="@string/lang"
                android:textAlignment="center"
                android:textColor="@color/mBlue"
                android:textSize="28sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:paddingStart="@dimen/common_margin"
                android:paddingEnd="@dimen/common_margin">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbSpanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    app:buttonTint="@color/mBlue"
                    android:tag="@string/select_spanish"
                    android:text="@string/select_spanish"
                    android:textSize="@dimen/common_text_size" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbFrench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:fontFamily="@font/roboto_medium"
                    app:buttonTint="@color/mBlue"
                    android:tag="@string/select_french"
                    android:text="@string/select_french"
                    android:textSize="@dimen/common_text_size" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin"
                    android:checked="true"
                    android:fontFamily="@font/roboto_medium"
                    app:buttonTint="@color/mBlue"
                    android:tag="@string/select_english"
                    android:text="@string/select_english"
                    android:textSize="@dimen/common_text_size" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                app:cornerRadius="10dp"
                android:elevation="2dp"
                android:backgroundTint="@color/orangeMC"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginBottom="@dimen/common_margin"
                android:text="@string/accept" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>