<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/blueMCDark"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="@dimen/common_margin"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:layout_marginTop="@dimen/common_margin"
                    android:layout_marginBottom="@dimen/common_half_margin"
                    android:backgroundTint="#f1441c"
                    android:textColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="15:30"
                        android:textColor="@color/white"
                        android:textSize="70dp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtDcbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text=""
                    app:layout_constraintBottom_toTopOf="@+id/button7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/bigLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/common_margin"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintGuide_percent="0.5"
                                android:orientation="vertical" />
                            <Button
                                android:id="@+id/btnInfo1"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginStart="@dimen/common_margin"
                                android:layout_marginEnd="@dimen/common_half_margin"
                                android:layout_marginBottom="@dimen/common_half_margin"
                                android:background="@drawable/round_button_blue"
                                android:text="@string/info"
                                android:textColor="@color/white"
                                app:layout_constraintEnd_toEndOf="@+id/guideline"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                            <Button
                                android:id="@+id/btnServices1"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginStart="@dimen/common_half_margin"
                                android:layout_marginEnd="@dimen/common_margin"
                                android:background="@drawable/round_button_orange"
                                android:text="@string/services"
                                android:textColor="@color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/guideline"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/common_half_margin"
                        android:layout_marginBottom="@dimen/common_margin"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintGuide_percent="0.5"
                                android:orientation="vertical" />

                            <Button
                                android:id="@+id/btnAbout1"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginStart="@dimen/common_margin"
                                android:layout_marginEnd="@dimen/common_half_margin"
                                android:background="@drawable/round_button_orange"
                                android:text="@string/about"
                                android:textColor="@color/white"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="@+id/guideline1"/>

                            <ImageButton
                                android:id="@+id/btnContact"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_marginTop="@dimen/common_half_margin"
                                android:layout_marginEnd="@dimen/common_margin"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/round_button_blue"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="@+id/guideline1"
                                app:srcCompat="@drawable/wpbutton" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/menu" />
    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>